chatapp_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chatapp-ingress
  annotations:
   kubernetes.io/ingress.class: "nginx"
 # kubernetes.io/tls-acme: "true"    
spec:
  rules:
  - host: nginx.rajputshashank.tk  # Replace with the URL you want.
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80

  - host: chatapp.rajputshashank.tk  # Replace with the URL you want.
    http:
      paths:
      - path: /
        backend:
          serviceName: chatapp
          servicePort: 80
  - host: nodejs.rajputshashank.tk  # Replace with the URL you want.
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs
          servicePort: 80

#  tls:
#   - secretName: key-tls
#    hosts:
#     - chatapp.rajputshashank.tk
#    - fundoo.rajputshashank.tk
